<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/MainLayout"

        android:background="#FF938CB1"

        android:gravity="center_horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="s">

        <Button
            android:id="@+id/menuBtn"
            style="@style/MenuBtn"
            android:layout_gravity="start"

            android:backgroundTint="#000000"

            android:layout_weight="0"
            android:onClick="menuBtnClick"
            android:text="@string/menu" />

        <LinearLayout
            android:id="@+id/menuLayout"
            style="@style/MenuLayout">

            <Button
                android:id="@+id/closeBtn"
                style="@style/MenuBtn"

                android:onClick="closeBtnClick"
                android:text="@string/close" />

            <Button
                android:id="@+id/exitBtn"
                style="@style/MenuBtn"

                android:onClick="exitBtnClick"
                android:text="@string/exit" />

            <Button
                android:id="@+id/languagesBtn"
                style="@style/MenuBtn"

                android:onClick="languagesBtnClick"
                android:text="@string/languages" />

            <Button
                android:id="@+id/creditsBtn"
                style="@style/MenuBtn"

                android:onClick="creditsBtnClick"
                android:text="@string/credits" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question_list"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/QuestionList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:paddingLeft="50dp"
            android:paddingTop="25dp"
            android:paddingRight="50dp"
            android:paddingBottom="25dp" />

        <Button
            android:id="@+id/selectBtn"
            style="@style/Btn"
            android:layout_marginTop="25dp"
            android:onClick="selectBtnClick"
            android:text="@string/select"
            android:textSize="24sp" />

        <Button
            android:id="@+id/randomBtn"
            style="@style/Btn"

            android:layout_marginTop="25dp"
            android:onClick="randomBtnClick"
            android:text="@string/random" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>